--- a/.eslintrc
+++ b/.eslintrc
@@ -1,31 +1,36 @@
 {
-	'extends': 'eslint:recommended',
-	'parser': 'babel-eslint',
-	'env': {
-		'browser': true,
-		'node': true,
-		'es6': true
-	},
-	'plugins': [
-		'react'
-	],
-	'rules': {
-		'no-debugger': 0,
-		'no-console': 0,
-		'new-cap': 0,
-		'strict': 0,
-		'no-underscore-dangle': 0,
-		'no-use-before-define': 0,
-		'no-undef': 1,
-		'eol-last': 0,
-		'quotes': 0,
-		'no-unused-vars': 1,
-		'comma-dangle': 0,
-		'no-class-assign': 0,
-		'no-mixed-spaces-and-tabs': 1,
-		'jsx-quotes': [2, 'prefer-double'],
-		'react/jsx-no-undef': 2,
-		'react/jsx-uses-react': 1,
-		'react/jsx-uses-vars': 1,
-	}
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ]
+    }
 }
