--- a/package.json
+++ b/package.json
@@ -39,13 +39,17 @@
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express-async-router": "^0.1.13",
     "history": "^4.7.2",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.6",
     "mongoose-unique-validator": "^2.0.1",
+    "multiparty": "^4.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
