--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "react-slick": "^0.19.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   }
 }
