--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express-async-router": "^0.1.13",
+    "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.6",
     "mongoose-unique-validator": "^2.0.1",
     "multiparty": "^4.1.4",
+    "node-sass": "^4.9.1",
+    "postcss-loader": "^2.1.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -60,6 +63,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^7.0.3",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   }
