--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -27,7 +29,7 @@
     "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.9",
     "json-loader": "^0.5.7",
-    "less-loader": "^4.0.5",
+    "less-loader": "^4.1.0",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.2",
     "url-loader": "^0.6.2",
@@ -35,6 +37,8 @@
     "webpack-dev-server": "^2.10.1"
   },
   "dependencies": {
+    "antd": "^3.6.5",
+    "autoprefixer-loader": "^3.2.0",
     "axios": "^0.18.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
@@ -46,13 +50,17 @@
     "express-async-router": "^0.1.13",
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
+    "hoek": "^5.0.3",
     "jsonwebtoken": "^8.3.0",
+    "less": "^3.5.3",
+    "less-plugin-npm-import": "^2.1.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.6",
     "mongoose-unique-validator": "^2.0.1",
     "multiparty": "^4.1.4",
     "node-sass": "^4.9.1",
     "postcss-loader": "^2.1.5",
+    "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
