--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "current-device": "^0.7.8",
     "express-async-router": "^0.1.13",
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
