--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "less": "^3.5.3",
     "less-plugin-npm-import": "^2.1.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.6",
     "mongoose-unique-validator": "^2.0.1",
     "multiparty": "^4.1.4",
