--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cookie-parser": "^1.4.3",
     "current-device": "^0.7.8",
     "express-async-router": "^0.1.13",
+    "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
     "hoek": "^5.0.3",
@@ -59,6 +60,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
     "mongoose-unique-validator": "^2.0.1",
+    "multer": "^1.3.1",
     "multiparty": "^4.1.4",
     "node-sass": "^4.9.1",
     "postcss-loader": "^2.1.5",
@@ -74,6 +76,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.3",
+    "serve-index": "^1.9.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   }
