--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.3",
     "serve-index": "^1.9.1",
+    "sms_ru": "0.0.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   }
