--- a/package.json
+++ b/package.json
@@ -48,11 +48,16 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "current-device": "^0.7.8",
+    "emojis": "^1.0.10",
+    "emotion": "^9.2.6",
     "express-async-router": "^0.1.13",
     "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fbjs": "^0.8.17",
     "history": "^4.7.2",
     "hoek": "^5.0.3",
+    "immutable": "^3.8.2",
+    "is-hotkey": "^0.1.3",
     "jsonwebtoken": "^8.3.0",
     "less": "^3.5.3",
     "less-plugin-npm-import": "^2.1.0",
@@ -63,10 +68,12 @@
     "multer": "^1.3.1",
     "multiparty": "^4.1.4",
     "node-sass": "^4.9.1",
+    "object-assign": "^4.1.1",
     "postcss-loader": "^2.1.5",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-emotion": "^9.2.6",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -77,6 +84,8 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.3",
     "serve-index": "^1.9.1",
+    "slate": "^0.37.7",
+    "slate-react": "^0.15.9",
     "sms_ru": "0.0.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
