--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "fbjs": "^0.8.17",
     "history": "^4.7.2",
     "hoek": "^5.0.3",
+    "image-extensions": "^1.1.0",
     "immutable": "^3.8.2",
     "is-hotkey": "^0.1.3",
+    "is-url": "^1.2.4",
     "jsonwebtoken": "^8.3.0",
     "less": "^3.5.3",
     "less-plugin-npm-import": "^2.1.0",
