--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.3",
+    "serve-favicon": "^2.5.0",
     "serve-index": "^1.9.1",
     "slate": "^0.37.7",
     "slate-react": "^0.15.9",
