--- a/package.json
+++ b/package.json
@@ -12,54 +12,49 @@
   "author": "shikin.a.v@mail.ru",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.8.4",
+    "autoprefixer-loader": "^3.2.0",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.8.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "eslint": "^5.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-react": "^7.10.0",
-    "file-loader": "^1.1.9",
-    "json-loader": "^0.5.7",
-    "less-loader": "^4.1.0",
-    "react-hot-loader": "^3.1.3",
-    "style-loader": "^0.20.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.10.1",
-    "antd": "^3.8.4",
-    "autoprefixer-loader": "^3.2.0",
-    "axios": "^0.18.0",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.10",
     "current-device": "^0.7.8",
     "emojis": "^1.0.10",
     "emotion": "^9.2.6",
+    "eslint": "^5.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.10.0",
     "express-async-router": "^0.1.13",
     "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fbjs": "^0.8.17",
+    "file-loader": "^1.1.9",
     "history": "^4.7.2",
     "hoek": "^5.0.3",
     "image-extensions": "^1.1.0",
     "immutable": "^3.8.2",
     "is-hotkey": "^0.1.3",
     "is-url": "^1.2.4",
+    "json-loader": "^0.5.7",
     "jsonwebtoken": "^8.3.0",
     "less": "^3.5.3",
+    "less-loader": "^4.1.0",
     "less-plugin-npm-import": "^2.1.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -74,6 +69,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-emotion": "^9.2.6",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -89,6 +85,11 @@
     "slate-react": "^0.15.9",
     "sms_ru": "0.0.1",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "style-loader": "^0.20.2",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.10.1",
+    "whatwg-fetch": "^3.0.0"
   }
 }
